--- a/templates/base.html
+++ b/templates/base.html
@@ -143,10 +143,20 @@
                             <i class="bi bi-search"></i> Advanced Search
                         </a>
                     </li>
+                    {% if current_user.role == 'admin' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <span class="nav-link text-light">{{ current_user.username }}</span>
+                        <span class="nav-link text-light">
+                            {{ current_user.username }}
+                            {% if current_user.role == 'admin' %}
+                            <span class="badge bg-warning">Admin</span>
+                            {% endif %}
+                        </span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
